chore: update example for the new API

--- a/examples/01_express/client/index.html
+++ b/examples/01_express/client/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="/client/entry.js"></script>
+    <script src="/entry.js"></script>
   </body>
 </html>
